# linear_algebra_cpp

./: .clang-format  CMakeLists.txt  README.md
include/: marith.hpp
include/mcalc/: Marith.hpp  Matrix.hpp  SqMarith.hpp  alias.hpp  errors.hpp
test/: marith_test.cpp  test_Marith.cpp  test_SqMarith.cpp
